--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "test": "jest"
   },
   "dependencies": {
-    "@ant-design/react-native": "^3.1.5",
+    "@ant-design/react-native": "3.1.5",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-decorators": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.8.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "mobx": "5.9.4",
+    "mobx-react": "5.4.3",
     "react": "16.8.3",
     "react-native": "0.59.4",
+    "react-native-calendars": "1.222.0",
     "react-native-secharts": "1.6.1",
+    "react-native-segmented-control-tab": "^3.4.1",
     "react-native-svg": "^10.1.0",
+    "react-native-vector-icons": "6.6.0",
     "react-native-webview": "2.14.3",
     "react-navigation": "^2.17.0"
   },
