--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-secharts": "1.6.1",
     "react-native-segmented-control-tab": "^3.4.1",
     "react-native-svg": "^10.1.0",
+    "react-native-tree-select": "^2.0.9",
     "react-native-vector-icons": "6.6.0",
     "react-native-webview": "2.14.3",
     "react-navigation": "^2.17.0"
